--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="form__element">
               <label for="price">Цена за ночь, руб.</label>
-              <input id="price" type="number" required minlength="1000" maxlength="1000000" placeholder="5000">
+              <input id="price" type="number" required min="1000" max="1000000" placeholder="5000">
             </div>
           </div>
           <div class="form__row">
@@ -269,6 +269,12 @@
   </div>
 </template>
 
+
+<script type="text/javascript" src="js/data.js"></script>
+<script type="text/javascript" src="js/card.js"></script>
+<script type="text/javascript" src="js/pin.js"></script>
 <script type="text/javascript" src="js/map.js"></script>
+<script type="text/javascript" src="js/form.js"></script>
+
 </body>
 </html>
