--- a/index.html
+++ b/index.html
@@ -271,10 +271,12 @@
 
 
 <script type="text/javascript" src="js/data.js"></script>
-<script type="text/javascript" src="js/card.js"></script>
+<script type="text/javascript" src="js/show-card.js"></script>
 <script type="text/javascript" src="js/pin.js"></script>
+<script type="text/javascript" src="js/sincronyze-fields.js"></script>
 <script type="text/javascript" src="js/map.js"></script>
 <script type="text/javascript" src="js/form.js"></script>
+
 
 </body>
 </html>
