created server request

--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
   </div>
 </template>
 
-
-<script type="text/javascript" src="js/data.js"></script>
+<script type="text/javascript" src="js/load.js"></script>
 <script type="text/javascript" src="js/show-card.js"></script>
 <script type="text/javascript" src="js/pin.js"></script>
 <script type="text/javascript" src="js/sincronyze-fields.js"></script>
