--- a/index.html
+++ b/index.html
@@ -271,10 +271,14 @@
 
 <script type="text/javascript" src="js/load.js"></script>
 <script type="text/javascript" src="js/show-card.js"></script>
+<script type="text/javascript" src="js/debounce.js"></script>
+<script type="text/javascript" src="js/filter.js"></script>
 <script type="text/javascript" src="js/pin.js"></script>
 <script type="text/javascript" src="js/sincronyze-fields.js"></script>
+<script type="text/javascript" src="js/slice.js"></script>
 <script type="text/javascript" src="js/map.js"></script>
 <script type="text/javascript" src="js/form.js"></script>
+
 
 
 </body>
