--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="tokyo__pin-map">
       <div class="pin  pin__main" tabindex="0"><img src="img/main-pin-image.png" alt="Main Pin" class="rounded" width="40" height="44"></div>
     </div>
-    <div id="offer-dialog" class="dialog">
+    <div id="offer-dialog" class="dialog hidden">
       <div class="dialog__title"><img src="img/avatars/user01.png" alt="Avatar" width="70" height="70">
         <a href="#" class="dialog__close"><img src="img/close.svg" alt="close" width="22" height="22"></a>
       </div>
@@ -130,7 +130,7 @@
             </div>
             <div class="form__element">
               <label for="price">Цена за ночь, руб.</label>
-              <input id="price" type="number" required min="1000" max="1000000" placeholder="5000">
+              <input id="price" type="number" required min="1000" max="1000000" placeholder="1000" value="1000">
             </div>
           </div>
           <div class="form__row">
